--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
     <table style="width: 100%; height: 100%">
       <!-- Your code here -->
 	  <tr>
-		  <td><table style="width: 100%; height: 100%">
+		  <td><table style="width:100%">
 			  <tr>
 				  <td colspan="2">Nested Table 2</td>
 			  </tr>	
