--- a/main.html
+++ b/main.html
@@ -24,7 +24,7 @@
 			  </tr>
 		  </table></td>
 		  <td>
-			  <table>
+			  <table style="width:100%">
 				  <tr>
 					  <td>Nested Table 1</td>
 				  </tr>
@@ -42,7 +42,7 @@
 	  </tr>
 	  <tr>
 		  <td>
-			  <table>
+			  <table style="width:100%">
 				  <tr>
 					  <td colspan="2">Nested Table 3</td>
 				  </tr>
