--- a/main.html
+++ b/main.html
@@ -7,22 +7,24 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <table style="width: 100%; height: 100%">
+    <table style="width:100%; height:100%">
       <!-- Your code here -->
 	  <tr>
-		  <td><table style="width:100%">
-			  <tr>
-				  <td colspan="2">Nested Table 2</td>
-			  </tr>	
-			  <tr>
-				  <td>Column 1</td>
-				  <td>Column 2</td>
-			  </tr>
-			  <tr>
-				  <td>abc</td>
-				  <td>def</td>
-			  </tr>
-		  </table></td>
+		  <td>
+			  <table style="width:100%">
+				  <tr>
+					  <td colspan="2"><b>Nested Table 2</b</td>
+				  </tr>	
+				  <tr>
+					  <td><b>Column 1</b</td>
+					  <td><b>Column 2</b></td>
+				  </tr>
+				  <tr>
+					  <td>abc</td>
+					  <td>def</td>
+				  </tr>
+			  </table>
+		  </td>
 		  <td>
 			  <table style="width:100%">
 				  <tr>
@@ -53,7 +55,7 @@
 			  </table>
 		  </td>  
 		  <td>
-			  <table>
+			  <table style="width:100%">
 				  <tr>
 					  <td>Nested Table 4</td>
 				  </tr>
