--- a/main.html
+++ b/main.html
@@ -28,7 +28,7 @@
 		  <td>
 			  <table style="width:100%">
 				  <tr>
-					  <td>Nested Table 1</td>
+					  <td><b>Nested Table 1</b</td>
 				  </tr>
 				  <tr>
 					  <ul>
@@ -46,10 +46,10 @@
 		  <td>
 			  <table style="width:100%">
 				  <tr>
-					  <td colspan="2">Nested Table 3</td>
+					  <td colspan="2"><b>Nested Table 3</b</td>
 				  </tr>
 				  <tr>
-					  <td>Nested Table</td>
+					  <td><a href="#">Nested Table</a></td>
 					  <td>Demo Continued</td>
 				  </tr>
 			  </table>
@@ -57,10 +57,10 @@
 		  <td>
 			  <table style="width:100%">
 				  <tr>
-					  <td>Nested Table 4</td>
+					  <td><b>Nested Table 4</b></td>
 				  </tr>
 				  <tr>
-					  <td>HTML</td>
+					  <td style="background-color:black; color:white;">HTML</td>
 				  </tr>
 			  </table>
 		  </td>
