--- a/main.html
+++ b/main.html
@@ -12,9 +12,12 @@
 	  <tr>
 		  <td>
 			  <table style="width:100%">
+				<thead>
 				  <tr>
-					  <td colspan="2"><b>Nested Table 2</b</td>
+					  <th colspan="2">Nested Table 2</th>
 				  </tr>	
+				</thead> 
+				<tbody>
 				  <tr>
 					  <td><b>Column 1</b</td>
 					  <td><b>Column 2</b></td>
@@ -23,13 +26,17 @@
 					  <td>abc</td>
 					  <td>def</td>
 				  </tr>
+				</tbody>
 			  </table>
 		  </td>
 		  <td>
 			  <table style="width:100%">
+				<thead>
 				  <tr>
-					  <td><b>Nested Table 1</b</td>
+					  <th>Nested Table 1</th>
 				  </tr>
+				</thead>
+				<tbody>
 				  <tr>
 					  <ul>
 						<td>
@@ -38,30 +45,39 @@
 						  <li>List item</li>
 						</td>
 					  </ul>  
-				  </tr>  
+				  </tr> 
+				</tbody>
 			  </table>	  			  		  
 		  </td>
 	  </tr>
 	  <tr>
 		  <td>
 			  <table style="width:100%">
+				<thead>
 				  <tr>
-					  <td colspan="2"><b>Nested Table 3</b</td>
+					  <th colspan="2">Nested Table 3</th>
 				  </tr>
+				</thead>
+				<tbody>
 				  <tr>
 					  <td><a href="#">Nested Table</a></td>
 					  <td>Demo Continued</td>
 				  </tr>
+				</tbody>
 			  </table>
 		  </td>  
 		  <td>
 			  <table style="width:100%">
+				<thead>
 				  <tr>
-					  <td><b>Nested Table 4</b></td>
+					  <th>Nested Table 4</th>
 				  </tr>
+				</thead>
+				<tbody>
 				  <tr>
 					  <td style="background-color:black; color:white;">HTML</td>
 				  </tr>
+				</tbody>
 			  </table>
 		  </td>
 	  </tr>
