--- a/main.html
+++ b/main.html
@@ -19,8 +19,8 @@
 				</thead> 
 				<tbody>
 				  <tr>
-					  <td><b>Column 1</b</td>
-					  <td><b>Column 2</b></td>
+					  <th>Column 1</th>
+					  <th>Column 2</th>
 				  </tr>
 				  <tr>
 					  <td>abc</td>
@@ -40,9 +40,9 @@
 				  <tr>
 					  <ul>
 						<td>
-						  <li>List item</li>
-						  <li>List item</li>
-						  <li>List item</li>
+						  <li>List item 1</li>
+						  <li>List item 2</li>
+						  <li>List item 3</li>
 						</td>
 					  </ul>  
 				  </tr> 
@@ -80,8 +80,7 @@
 				</tbody>
 			  </table>
 		  </td>
-	  </tr>
-		  
+	  </tr>		  
     </table>
   </body>
 </html>
